Eliminar rutas absolutas